--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
+# List of stock symbols
 [stocks]
-symbols = META, AMZN, AAPL, TSLA # List of stock symbols
+symbols = META, AMZN, AAPL, TSLA 
 
+# Percentage alarm limit
 [settings]
-alarm_limit = 2.50 # Percentage alarm limit
+alarm_limit = 2.50 
