--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
-# List of stock symbols
+# List of stock symbols. FInd symbols on https://finance.yahoo.com/lookup/
 [stocks]
-symbols = META, AMZN, AAPL, TSLA 
+symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST
 
 # Percentage alarm limit
 [settings]
