Sending to Daniel

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
-# List of stock symbols. FInd symbols on https://finance.yahoo.com/lookup/
+# List of stock symbols. Find symbols on https://finance.yahoo.com/lookup/
 [stocks]
-symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST
+symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST
 
-# Percentage alarm limit
+# Negative percentage alarm limit for all stocks
 [settings]
-alarm_limit = 2.50 
+alarm_limit = 1.50 
