--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 # List of stock symbols. Find symbols on https://finance.yahoo.com/lookup/
+# Symbols MUST be separated by a comma an a space, ", "
 [stocks]
 symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST
 
