--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 # List of stock symbols. Find symbols on https://finance.yahoo.com/lookup/
-# Symbols MUST be separated by a comma
+# Symbols MUST be separated by a comma. Symbols can't contain spaces. Spaces before/after symbols are optional.
 [stocks]
-symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST
+symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST, SMURF
 
 # Negative percentage alarm limit for all stocks
 [settings]
