Working on historiacal data

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,11 @@
-# List of stock symbols. Find symbols on https://finance.yahoo.com/lookup/
-# Symbols MUST be separated by a comma. Symbols can't contain spaces. Spaces before/after symbols are optional.
+# List of stock symbols. Find symbols at https://finance.yahoo.com/lookup/
+# Symbols MUST be separated by a comma. Symbols can't contain spaces. Spaces before/after symbols/commas are optional.
 [stocks]
-symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST, SMURF
+symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST, FAULTY-SYMBOL-TEST
 
 # Negative percentage alarm limit for all stocks
 [settings]
-alarm_limit = 1.50 
+alarm_limit = 1.50
+alarm_limit_decrease = 10.0
+alarm_limit_raise_after_decrease = 5
+start-date = 2025-03-20
