--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,10 @@
 symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST, FAULTY-SYMBOL-TEST
 
 [settings]
+# The percentage the stock price must decrease before an alarm is raised.
 alarm_limit_decrease = 0.20
+
+# The percentage the stock price must increase after a decrease before an alarm is raised.
 alarm_limit_raise_after_decrease = 0.10
+
 start-date = 2025-03-20
