Added comments to config ini

--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,11 @@ symbols = META, AMZN, AAPL, TSLA, ELUX-B.ST, VOLCAR-B.ST, ERIC-B.ST, FAULTY-SYMB
 
 [settings]
 # The percentage the stock price must decrease before an alarm is raised.
-alarm_limit_decrease = 0.20
+# For example, if the stock price is $100 and the alarm_limit_decrease is 0.20, an alarm will be raised if the stock price decreases to $80.
+# For example 0.20 = 20%
+alarm_limit_decrease = 0.02
 
 # The percentage the stock price must increase after a decrease before an alarm is raised.
-alarm_limit_raise_after_decrease = 0.10
+alarm_limit_raise_after_decrease = 0.01
 
 start-date = 2025-03-20
