--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 # List of stock symbols. Find symbols at https://finance.yahoo.com/lookup/
-# Symbols MUST be separated by a comma. Symbols can't contain spaces. Spaces before/after symbols/commas are optional.
+# Symbols MUST be separated by a comma. Spaces before/after symbols/commas are optional.
 [stocks]
 symbols = INWI.ST, LOOMIS.ST, BETS-B.ST, BRAV.ST, NEWA-B.ST, NOTE.ST, VBG-B.ST, G5EN.ST, THULE.ST, BMAX.ST
 
