Changed bug start-date to start_date

--- a/app/config.ini
+++ b/app/config.ini
@@ -11,4 +11,4 @@ alarm_limit_decrease = 4.00
 # The percentage the stock price must increase after a decrease before an alarm is raised.
 alarm_limit_raise_after_decrease = 2.00
 
-start-date = 2025-03-20
+start_date = 2025-03-20
