--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -8,7 +8,12 @@ symbols = INWI.ST, LOOMIS.ST, BETS-B.ST, BRAV.ST, NEWA-B.ST, NOTE.ST, VBG-B.ST, 
 # For example, if the stock price is $100 and the alarm_limit_decrease is 20, an alarm will be raised if the stock price decreases to $80.
 alarm_limit_decrease = 4.00
 
-# The percentage the stock price must increase after a decrease before an alarm is raised.
+# The percentage the stock price must increase after decrease.
+# the latest price is higher than the lowest price + 10% of the start price AND
+# decrease_limit_reached = true
 alarm_limit_raise_after_decrease = 2.00
 
 start_date = 2025-03-20
+
+# The time in minutes between each update of the stock prices. NOT USED YET.
+update_frequency_in_minutes = 5
