--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -18,8 +18,8 @@ start_date = 2025-03-20
 # The time in minutes between each update of the stock prices. NOT USED YET.
 update_frequency_in_minutes = 5
 
-# Number of decimals in prices. NOT USED YET.
-price_decimals = 2
+# Maximum Number of decimals in prices. NOT USED YET.
+max_price_decimals = 2
 
 # Alarm when Inc. limit reached after decrease limit reached goes to True. Possible values are True or False.  NOT USED YET.
 alarm_sound_on = True
