Shorted datetimes to be easier to show on web page

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -18,7 +18,7 @@ start_date = 2025-03-20
 # The time in minutes between each update of the stock prices. NOT USED YET.
 update_frequency_in_minutes = 5
 
-# Maximum Number of decimals in prices. NOT USED YET.
+# Maximum number of decimals in prices.
 max_price_decimals = 2
 
 # Alarm when Inc. limit reached after decrease limit reached goes to True. Possible values are True or False.  NOT USED YET.
